[package]
name = "partition_problem"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_xoshiro = "0.6.0"
ndarray = "0.15.6"
clap = { version = "4.0.29", features = ["derive"] }
int_data_analysis = { git = "https://gitlab.com/pacifi5t/int_data_analysis" }

[dev-dependencies]
chrono = "0.4.23"
csv = "1.1.6"
plotters = "0.3.4"
